<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rGOperation"
        android:layout_width="210dp"
        android:layout_height="117dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/triangleRButton"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangulo" />

        <RadioButton
            android:id="@+id/squareRButton"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quadrado" />

        <RadioButton
            android:id="@+id/circleRButton"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circulo" />
    </RadioGroup>

    <Button
        android:id="@+id/moveForwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btClicked"
        android:text="@string/avancar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGOperation"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:textSize="20dp"
        android:text="Selecione a forma"
        app:layout_constraintBottom_toTopOf="@+id/rGOperation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>